--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ code {
     monospace;
 }
 
+textarea {
+  height: auto;
+}
+
 #root {
   margin: 0;
   padding: 0;
@@ -55,6 +59,33 @@ code {
   display: inline-block;
   padding: 15px;
   text-align: left;
+}
+
+.card-docs-description-url {
+  display: block;
+  padding: 5px 15px;
+  max-width: 350px;
+}
+
+.fields {
+  margin-bottom: 40px;
+}
+
+div.card-docs-description.field {
+  display: block;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.field__key {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.field__value {
+  display: inline-block;
+  padding: 5px 15px;
+  margin-bottom: 10px;
 }
 
 .avatar {
